fix(Placements): use pod class for spacing
Instead of adding the extra-bottom class, reuse the
pod from cnvs and make all sides flush except the bottom.

--- a/src/styles/components/form-elements/form-group/styles.less
+++ b/src/styles/components/form-elements/form-group/styles.less
@@ -10,10 +10,6 @@
       }
     }
 
-    .extra-bottom {
-      margin-bottom: 30px;
-    }
-
     &-heading {
       align-items: center;
       display: flex;
